<resources>
    <string name="app_name">Pita</string>
    <string name="enter">Войти</string>
    <string name="login">Вход</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_phone_number_for_login">Введите номер телефона, чтобы войти или зарегистироваться</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="_7">+7</string>
    <string name="phone_confirmation">Подтверждение телефона</string>
    <string name="sms_code_activity_description">На номер %1$s отправлено СМС с кодом.</string>
    <string name="sms_code">СМС код</string>
    <string name="countdown">Выслать код повторно можно через %1$d сек</string>
    <string name="verification_complete">Verification Complete</string>
    <string name="verification_failed">Verification failed</string>
    <string name="code_sent">Code sent</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="enter_valid_code">Вы ввели неправильный код.</string>
    <string name="enter_code">Введите код.</string>
    <string name="next">Далee</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="initial_profile_activity_description">Как к вам обращаться?</string>
    <string name="enter_your_name">Введите имя</string>
    <string name="userName">Имя</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="sign_out">Выйти</string>
    <string name="home">Главная</string>
    <string name="messages">Сообщения</string>
    <string name="favorites">Избранные</string>
    <string name="profile">Профиль</string>
    <string name="add">Разместить</string>
    <string name="new_announcement">Новое объявление</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="shelf_life">Срок годности</string>
    <string name="Indicate_your_location">Укажите ваше местоположение</string>
    <string name="meeting_point">Место встречи</string>
    <string name="quantity">Количество</string>
    <string name="pick_up_times">Время получения</string>
    <string name="add_photo">Добавить фото</string>
    <string name="take_photo">Сделать фотографию</string>
    <string name="choose_from_gallery">Выбрать из галереи</string>

</resources>