<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.SmsCodeActivity">

        <TextView
            android:id="@+id/title"
            style="@style/LoginTitle"
            android:text="@string/phone_confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/description"
            style="@style/LoginDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/enter_phone_number_for_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/smsCode"
            style="@style/LoginTextInputLayout"
            android:hint="@string/sms_code"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/next"
            app:boxBackgroundColor="@android:color/transparent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/next"
            android:textSize="12sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/smsCode"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smsCode"
            tools:text="@string/countdown" />

        <Button
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/resend_code"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smsCode"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>